separate withAxiom and webVitals as subexports

--- a/package.json
+++ b/package.json
@@ -56,13 +56,8 @@
   },
   "exports": {
     ".": "./dist/index.js",
-    "./hooks": {
-      "import": "./dist/hooks.js",
-      "default": "./dist/hooks.js",
-      "types": "./dist/hooks.d.ts"
-    },
-    "./components": "./dist/components.js",
     "./webvitals": "./dist/webVitals/index.js",
+    "./withAxiom": "./dist/withAxiom.js",
     "./package.json": "./package.json"
   }
 }
