Fix loading types of next/server requests
Co-authored-by: arne bahlo <arne@axiom.co>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2015",
     "module": "CommonJS",
     "moduleResolution": "node",
     "jsx": "react",
