--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "next-axiom",
   "description": "Send WebVitals from your Next.js project to Axiom.",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.0",
   "author": "Axiom, Inc.",
   "license": "MIT",
   "contributors": [
