--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/axiomhq/next-axiom#readme",
   "peerDependencies": {
-    "next": "^12.1.4 || ^13"
+    "next": ">=12.1.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
