--- a/examples/logger/package.json
+++ b/examples/logger/package.json
@@ -7,19 +7,20 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "next": "^12.2.0",
+        "next": "^14.0.2",
         "next-axiom": "file:../../",
-        "react": "18.0.0",
-        "react-dom": "18.0.0",
-        "swr": "^1.3.0"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "swr": "^2.2.4"
     },
     "devDependencies": {
-        "eslint": "8.12.0",
-        "eslint-config-next": "12.1.4",
-        "@types/node": "18.11.9",
-        "@types/react": "18.0.25",
-        "@types/react-dom": "18.0.9",
-        "typescript": "4.9.3"
+        "@types/node": "^20.9.0",
+        "@types/react": "^18.2.37",
+        "@types/react-dom": "^18.2.15",
+        "@typescript-eslint/eslint-plugin": "^6.10.0",
+        "@typescript-eslint/parser": "^6.10.0",
+        "eslint": "^8.53.0",
+        "eslint-config-next": "^14.0.2",
+        "typescript": "^5.2.2"
     }
 }
-
