--- a/examples/logger/package.json
+++ b/examples/logger/package.json
@@ -1,26 +1,28 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "next": "^14.0.2",
-        "next-axiom": "file:../../",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "swr": "^2.2.4"
-    },
-    "devDependencies": {
-        "@types/node": "^20.9.0",
-        "@types/react": "^18.2.37",
-        "@types/react-dom": "^18.2.15",
-        "@typescript-eslint/eslint-plugin": "^6.10.0",
-        "@typescript-eslint/parser": "^6.10.0",
-        "eslint": "^8.53.0",
-        "eslint-config-next": "^14.0.2",
-        "typescript": "^5.2.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prettier": "prettier --write ."
+  },
+  "dependencies": {
+    "next": "^14.0.2",
+    "next-axiom": "file:../../",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^14.0.2",
+    "prettier": "^3.1.0",
+    "typescript": "^5.2.2"
+  }
 }
