--- a/examples/logger/package.json
+++ b/examples/logger/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "next": "^14.0.2",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18.2.15",
     "eslint": "^8.53.0",
     "eslint-config-next": "^14.0.2",
+    "prettier": "^3.1.0",
     "typescript": "^5.2.2"
   }
 }
