add next-axiom to t3 app

--- a/examples/trpc/package.json
+++ b/examples/trpc/package.json
@@ -16,6 +16,7 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "next": "^14.0.0",
+    "next-axiom": "file:../..",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
