test: convert to vitest

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/node_modules
+node_modules/
 /tsconfig.tsbuildinfo
 /src/*.d.ts
 /src/*.js
 /src/*.js.map
-/dist/
-/.vscode
+dist/
+.vscode/
+coverage/
 .envrc
