--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "format": "prettier --write src/*.ts __tests__/*.ts",
-    "check-format": "prettier -c src/*.ts __tests__/*.ts",
-    "test": "jest"
+    "format": "prettier --write src/*.ts tests/*.ts",
+    "check-format": "prettier -c src/*.ts tests/*.ts",
+    "test": "vitest run tests --coverage"
   },
   "repository": {
     "type": "git",
@@ -40,19 +40,16 @@
     "react": ">=18.0.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.1",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
-    "jest": "^29.6.1",
-    "jest-config": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
+    "@vitest/coverage-v8": "^1.2.2",
     "prettier": "^3.0.0",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "remeda": "^1.29.0",
+    "vitest": "^1.2.2",
     "whatwg-fetch": "^3.6.2"
   }
 }
