--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@vitest/coverage-v8": "^1.2.2",
-    "vitest": "^1.2.2",
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^1.2.2"
   },
   "dependencies": {
-    "remeda": "^1.29.0",
+    "use-deep-compare": "^1.2.1",
     "whatwg-fetch": "^3.6.2"
   }
 }
