--- a/examples/trpc-app-router/package.json
+++ b/examples/trpc-app-router/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
+    "format": "prettier --write .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
