--- a/examples/logger/package.json
+++ b/examples/logger/package.json
@@ -15,6 +15,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
+  "browser": {
+    "fs": false
+  },
   "devDependencies": {
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
