--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@vitest/coverage-v8": "^1.2.2",
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  },
-  "dependencies": {
-    "use-deep-compare": "^1.2.1",
+    "typescript": "^5.1.6",
     "vitest": "^1.2.2",
     "whatwg-fetch": "^3.6.2"
+  },
+  "dependencies": {
+    "use-deep-compare": "^1.2.1"
   }
 }
