--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "vitest": "^1.2.2",
-    "whatwg-fetch": "^3.6.2"
+    "vitest": "^1.2.2"
   },
   "dependencies": {
+    "whatwg-fetch": "^3.6.2",
     "use-deep-compare": "^1.2.1"
   }
 }
