--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "vitest": "^2.1.5"
   },
   "dependencies": {
-    "whatwg-fetch": "^3.6.2",
-    "use-deep-compare": "^1.2.1"
+    "@vercel/functions": "^2.2.2",
+    "use-deep-compare": "^1.2.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
